# redmine-reporter-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: main.rs  settings.toml.sample
