[package]
name = "redmine_reporter"
version = "0.2.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
publish = false

[features]
dev = ["clippy"]

[dependencies]
hyper = "~0.9.0"
toml = "~0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
time = "~0.1.35"
clippy = {version = '0.0.67', optional = true}
