[package]
name = "redmine_reporter"
version = "0.3.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
publish = false

[features]
dev = ["clippy"]

[dependencies]
reqwest = "~0.8.0"
toml = "~0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "~0.1.40"
clippy = {version = '0.0.210', optional = true}
